@@ -1,4 +1,7 @@
 {
+  "env": {
+    "CONFIG_FILES": "$HOME/code/server/config/production.json,$HOME/code/server/config/aws.json,$HOME/config.json"
+  },
   "processes": [ "server/bin/bigtent" ],
   "hooks": {
     "postdeploy": "scripts/awsbox/post_deploy.js"
