@@ -1,0 +1,3 @@
+{
+  "var_path": "/home/app/var"
+}
