@@ -1,7 +1,7 @@
 <%= gettext('Thank you for using Persona.') %>
 
-<%= format(gettext('Click to confirm this email address is linked to your %(webmail)s account.'), { webmail: webmail }) %>
-<%= link %>
+<%= format(gettext('Use the PIN code below, to confirm this email address is linked to your %(webmail)s account.'), { webmail: webmail }) %>
+<%= pin_code %>
 
 <%= format(gettext('Note: If you are NOT trying to sign into a website with Persona, please ignore this email.')) %>
 
